# aiomisc-dependency

./: .drone.yml  .gitignore  COPYING  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yaml
aiomisc_dependency/: __init__.py  plugin.py
tests/: conftest.py  test_dependency.py
